  (e.g. for monks who have Spirit Spheres)
- teleportAuto_useSP if set to 2 will only use SP when other players are 
  present.
- EXPERIMENTAL _misses and _totalMisses conditions, e.g. to switch elemental
  weapons using equipAuto when you are missing a monster that changed
  elements.

New commands:
- ihist
  Display last few entries of the item log.

Internal:
- $interface->beep() function for cross-platform beep support.
- OpenKore will exit if a plugin failed to load.
- OpenKore will exit if a configuration file failed to load.
- checkMonsterCondition() now takes a monster hash instead of monster ID.
  (Perhaps other similar functions should be converted too)

Credits:
- asuwannarat, as2765324: tRO server details.
- MindChild: support for the 'all' option in items_control.txt,
  support for the --storage argument.
- jabskeeterbug: item history command.
- jsteng: some routing bug fixes.


==================
### 1.5.0 (beta)
==================

A new beta version, 1.5.0, has finally been released. A lot of stuff
has changed, and your old configuration files may not work, so please
read this document thoroughly. But the easiest way is to delete your
configuration files and start from scratch using the new default
configuration files.
Remember: this is a BETA version. It may not be stable.

Special thanks to the following people; OpenKore would not have been
possible without them:
- Joseph: -1 and 2 attack-auto support in mon_control.txt,
  avoidList_inLockOnly, auto cart get, misc other things
- aputs: Support for the _monsters option in useSelf_skill, useSelf_item
  and partySkill.
- obyarou: Priority attack support for non-aggressive monsters,
  shop timeout in X-Kore bugfix (bug #49), sitAuto_idle vs
  shopAuto_open conflict fix (bug #50), other misc bugfixes.
- fov: writeDataFile*() tweaks, lockMap and randomWalk tweaks,
  partySkills for certain jobs
- polokus: idRO Amatsu/Kunlun support
- Ven`Tatsu: walkable water bugfix (bug #21)